fixed projects page spacing

--- a/projects-page/main.scss
+++ b/projects-page/main.scss
@@ -201,7 +201,7 @@ nav :checked ~ .icon-burger .line:nth-child(2) {
   ". project2 project2 ."
   ". project3 project3 ."
   ". footer footer .";
-  grid-gap: auto;
+  grid-gap: 1em;
   margin: auto;
   font-family:'Poppins', sans-serif;
 
@@ -305,13 +305,13 @@ nav :checked ~ .icon-burger .line:nth-child(2) {
 
 #project1 {
   display: grid;
-  height: 100vh;
+  height: auto;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr 1fr;
   grid-template-areas: 
   "projectheaderandpara"
   "image";
-  grid-gap: 0em;
+  grid-gap: 1em;
   margin: auto;
   font-family:'Poppins', sans-serif;
 
@@ -351,13 +351,13 @@ nav :checked ~ .icon-burger .line:nth-child(2) {
 
 #project2{
   display: grid;
-  height: 100vh;
+  height: auto;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr 1fr;
   grid-template-areas: 
   "projectheaderandpara"
   "image";
-  grid-gap: 0em;
+  grid-gap: 1em;
   margin: auto;
   font-family:'Poppins', sans-serif;
 
@@ -397,13 +397,13 @@ nav :checked ~ .icon-burger .line:nth-child(2) {
 
 #project3{
   display: grid;
-  height: 100vh;
+  height: auto;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr 1fr;
   grid-template-areas: 
   "projectheaderandpara"
   "image";
-  grid-gap: 0em;
+  grid-gap: 1em;
   margin: auto;
   font-family:'Poppins', sans-serif;
 
